--- a/Application/EdFi.Ods.AdminApi.Common/EdFi.Ods.AdminApi.Common.csproj
+++ b/Application/EdFi.Ods.AdminApi.Common/EdFi.Ods.AdminApi.Common.csproj
@@ -23,6 +23,7 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" />
         <PackageReference Include="NJsonSchema" />
         <PackageReference Include="Npgsql" />
+        <PackageReference Include="Quartz" />
         <PackageReference Include="Swashbuckle.AspNetCore" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
         <PackageReference Include="System.Text.Json" />
