--- a/Application/EdFi.Ods.AdminApi/appsettings.json
+++ b/Application/EdFi.Ods.AdminApi/appsettings.json
@@ -1,15 +1,16 @@
 {
-  "AppSettings": {
-    "DatabaseEngine": "SqlServer",
-    "EncryptionKey": "{ BASE_64_ENCRYPTION_KEY }",
-    "PathBase": "",
-    "DefaultPageSizeOffset": 0,
-    "DefaultPageSizeLimit": 25,
-    "MultiTenancy": false,
-    "PreventDuplicateApplications": false,
-    "EnableApplicationResetEndpoint": false,
-    "adminApiMode": "v2"
-  },
+    "AppSettings": {
+        "DatabaseEngine": "SqlServer",
+        "EncryptionKey": "{ BASE_64_ENCRYPTION_KEY }",
+        "PathBase": "",
+        "DefaultPageSizeOffset": 0,
+        "DefaultPageSizeLimit": 25,
+        "MultiTenancy": false,
+        "PreventDuplicateApplications": false,
+        "EnableApplicationResetEndpoint": false,
+        "EdOrgsRefreshIntervalInMins": 60,
+        "adminApiMode": "v2"
+    },
   "AdminConsoleSettings": {
     "ApplicationName": "Ed-Fi Health Check",
     "ClaimsetName": "Ed-Fi Admin App",
