--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -60,6 +60,7 @@ jobs:
 
   promote-Azure-artifact:
     name: Promote Azure Artifact
+    if: false
     runs-on: ubuntu-latest
     permissions:
       contents: read
