--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -49,6 +49,9 @@ jobs:
 
           $apiVersion = $(minver -t $apiPrefix)
 
+          Write-Host "Using version: $apiVersion"
+          Write-Host "Using semver: $($apiVersion -Replace $apiPrefix)"
+
           # Full release name
           "admin-api=$apiVersion" >> $env:GITHUB_OUTPUT
 
@@ -56,6 +59,7 @@ jobs:
           "admin-api-semver=$($apiVersion -Replace $apiPrefix)" >> $env:GITHUB_OUTPUT
 
       - name: Publish .NET Assemblies
+        if: false
         run: |
           $apiVersion = "${{ steps.versions.outputs.admin-api-semver }}"
 
@@ -64,6 +68,7 @@ jobs:
               -APIVersion $apiVersion
 
       - name: Get Assembly File Version
+        if: false
         id: assembly-version
         shell: pwsh
         run: |
@@ -78,9 +83,11 @@ jobs:
           "file-version=$fileVersion" >> $env:GITHUB_OUTPUT
 
       - name: Setup Nuget.exe
+        if: false
         uses: nuget/setup-nuget@323ab0502cd38fdc493335025a96c8fdb0edc71f #v2.0.1
 
       - name: Replace Installer Version Token
+        if: false
         shell: pwsh
         run: |
           $version = "${{ steps.assembly-version.outputs.file-version }}"
@@ -134,7 +141,7 @@ jobs:
           Write-Host "Verification passed - token successfully replaced with version: $version"
 
       - name: Create NuGet Packages
-        if: success()
+        if: false
         run: |
           $apiVersion = "${{ steps.versions.outputs.admin-api-semver }}"
 
@@ -145,13 +152,14 @@ jobs:
               -Configuration Release
 
       - name: Generate hash for NuGet package
+        if: false
         id: hash-code
         shell: bash
         run: |
           echo "hash-code=$(sha256sum *.nupkg | base64 -w0)" >> $GITHUB_OUTPUT
 
       - name: Upload Packages as Artifacts
-        if: success()
+        if: false
         uses: actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
         with:
           name: "${{ env.PACKAGE_NAME }}-NuGet"
@@ -160,6 +168,7 @@ jobs:
           retention-days: 30
 
   sbom-create:
+    if: false
     name: Create SBOM
     runs-on: ubuntu-latest
     needs: pack
@@ -214,6 +223,7 @@ jobs:
           echo "sbom-hash-code=$sbom_hash" >> $GITHUB_OUTPUT
 
   sbom-attach:
+    if: false
     name: Attach SBOM file
     runs-on: ubuntu-latest
     needs:
@@ -260,6 +270,7 @@ jobs:
               -InFile $uploadName
 
   provenance-create:
+    if: false
     name: Create Provenance
     needs: pack
     permissions:
@@ -275,6 +286,7 @@ jobs:
       compile-generator: true
 
   publish-package:
+    if: false
     name: Publish NuGet Package
     needs: pack
     runs-on: ubuntu-latest
@@ -306,6 +318,7 @@ jobs:
            }
 
   docker-publish:
+    if: false
     name: Publish to Docker Hub
     runs-on: ubuntu-latest
     needs:
