--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -59,7 +59,6 @@ jobs:
           "admin-api-semver=$($apiVersion -Replace $apiPrefix)" >> $env:GITHUB_OUTPUT
 
       - name: Publish .NET Assemblies
-        if: false
         run: |
           $apiVersion = "${{ steps.versions.outputs.admin-api-semver }}"
 
@@ -68,7 +67,6 @@ jobs:
               -APIVersion $apiVersion
 
       - name: Get Assembly File Version
-        if: false
         id: assembly-version
         shell: pwsh
         run: |
@@ -80,14 +78,13 @@ jobs:
           }
 
           $fileVersion = [System.Diagnostics.FileVersionInfo]::GetVersionInfo($dllPath).FileVersion
+          Write-Host "Extracted file version: $fileVersion"
           "file-version=$fileVersion" >> $env:GITHUB_OUTPUT
 
       - name: Setup Nuget.exe
-        if: false
         uses: nuget/setup-nuget@323ab0502cd38fdc493335025a96c8fdb0edc71f #v2.0.1
 
       - name: Replace Installer Version Token
-        if: false
         shell: pwsh
         run: |
           $version = "${{ steps.assembly-version.outputs.file-version }}"
@@ -141,7 +138,6 @@ jobs:
           Write-Host "Verification passed - token successfully replaced with version: $version"
 
       - name: Create NuGet Packages
-        if: false
         run: |
           $apiVersion = "${{ steps.versions.outputs.admin-api-semver }}"
 
@@ -223,8 +219,8 @@ jobs:
           echo "sbom-hash-code=$sbom_hash" >> $GITHUB_OUTPUT
 
   sbom-attach:
-    if: false
     name: Attach SBOM file
+    if: false
     runs-on: ubuntu-latest
     needs:
       - sbom-create
