Refactor versioning logic to use getversion.ps1 script for consistency in workflows

--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -47,11 +47,11 @@ jobs:
           # Install the MinVer CLI tool
           &dotnet tool install --global minver-cli
 
-          $apiVersion = $(minver -t $apiPrefix)
-
-          Write-Host "Using version: $apiVersion"
-          Write-Host "Using semver: $($apiVersion -Replace $apiPrefix)"
-
+          # $apiVersion = $(minver -t $apiPrefix)
+          # Write-Host "Using version: $apiVersion"
+          # Write-Host "Using semver: $($apiVersion -Replace $apiPrefix)"
+          
+          $apiVersion = & ./eng/getversion.ps1
           # Full release name
           "admin-api=$apiVersion" >> $env:GITHUB_OUTPUT
 
