--- a/.github/workflows/on-merge-or-tag.yml
+++ b/.github/workflows/on-merge-or-tag.yml
@@ -46,28 +46,8 @@ jobs:
 
           # Provisional workaround for branches that do not have the latest tags
           # Check if we have a v2.x tag anywhere in the repo
-          $latestV2Tag = git tag -l "v2.*" --sort=-v:refname | Select-Object -First 1
           
-          if ($latestV2Tag)
-          {
-            Write-Host "Found v2.x tag: $latestV2Tag"
-            
-            # Parse version and increment patch
-            $version = $latestV2Tag -replace '^v', ''
-            $parts = $version -split '\.'
-            $major = $parts[0]
-            $minor = $parts[1]
-            $patch = [int]$parts[2] + 1
-            
-            $apiVersion = "v$major.$minor.$patch"
-          }
-          else
-          {
-            # Fallback to MinVer
-            $apiVersion = $(minver -t $apiPrefix)
-          }
-
-          Write-Host "Using version: $apiVersion"
+          $apiVersion = & ./eng/getversion.ps1
 
           "admin-api=$apiVersion" >> $env:GITHUB_OUTPUT
 
