--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -13,9 +13,12 @@ permissions: read-all
 
 env:
   ARTIFACTS_API_KEY: ${{ secrets.AZURE_ARTIFACTS_PERSONAL_ACCESS_TOKEN }}
-  ARTIFACTS_FEED_URL: "https://pkgs.dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging/EdFi/nuget/v3/index.json"
-  ARTIFACTS_PACKAGES_URL: "https://pkgs.dev.azure.com/ed-fi-alliance/9f7770ac-66d9-4fbc-b81e-b5ad79002b62/_apis/packaging/feeds/338858dc-b976-4355-ab70-5e713b1f56be/nuget/packagesBatch?api-version=7.1-preview.1"
-  RELEASE_VIEW_ID: "53acfbeb-77f2-4ef6-8596-dc19e5802775" #Release
+  # ARTIFACTS_FEED_URL: "https://pkgs.dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging/EdFi/nuget/v3/index.json"
+  # ARTIFACTS_PACKAGES_URL: "https://pkgs.dev.azure.com/ed-fi-alliance/9f7770ac-66d9-4fbc-b81e-b5ad79002b62/_apis/packaging/feeds/338858dc-b976-4355-ab70-5e713b1f56be/nuget/packagesBatch?api-version=7.1-preview.1"
+  ARTIFACTS_FEED_URL: "https://pkgs.dev.azure.com/JuanAgudelo0230/adminapi-test/_packaging/jdav-adminapi-test/nuget/v3/index.json"
+  ARTIFACTS_PACKAGES_URL: "https://pkgs.dev.azure.com/JuanAgudelo0230/adminapi-test/_apis/packaging/feeds/jdav-adminapi-test/nuget/packagesBatch?api-version=7.1-preview.1"
+  # RELEASE_VIEW_ID: "53acfbeb-77f2-4ef6-8596-dc19e5802775" #Release
+  RELEASE_VIEW_ID: "@Release" #Release
   ARTIFACTS_USERNAME: ${{ secrets.AZURE_ARTIFACTS_USER_NAME }}
 
 jobs:
@@ -71,13 +74,13 @@ jobs:
         shell: pwsh
         run: |
           Write-Host "Promoting package for release ${github.ref_name}"
-          # $arguments = @{
-          #   PackagesURL = "${{ env.ARTIFACTS_PACKAGES_URL }}"
-          #   Username    = "${{ env.ARTIFACTS_USERNAME }}"
-          #   ViewId        = "${{ env.RELEASE_VIEW_ID }}"
-          #   ReleaseRef  = "${{ github.ref_name }}"
-          #   Password    = (ConvertTo-SecureString -String "${{ env.ARTIFACTS_API_KEY }}" -AsPlainText -Force)
-          # }
+          $arguments = @{
+            PackagesURL = "${{ env.ARTIFACTS_PACKAGES_URL }}"
+            Username    = "${{ env.ARTIFACTS_USERNAME }}"
+            ViewId        = "${{ env.RELEASE_VIEW_ID }}"
+            ReleaseRef  = "${{ github.ref_name }}"
+            Password    = (ConvertTo-SecureString -String "${{ env.ARTIFACTS_API_KEY }}" -AsPlainText -Force)
+          }
 
-          # Import-Module ./eng/promote-packages.psm1
-          # Invoke-Promote @arguments
+          Import-Module ./eng/promote-packages.psm1
+          Invoke-Promote @arguments
