--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -20,6 +20,7 @@ env:
   # RELEASE_VIEW_ID: "53acfbeb-77f2-4ef6-8596-dc19e5802775" #Release
   RELEASE_VIEW_ID: "@Release" #Release
   ARTIFACTS_USERNAME: ${{ secrets.AZURE_ARTIFACTS_USER_NAME }}
+  VSS_NUGET_EXTERNAL_FEED_ENDPOINTS: '{"endpointCredentials": [{"endpoint": "https://pkgs.dev.azure.com/JuanAgudelo0230/adminapi-test/_packaging/jdav-adminapi-test/nuget/v3/index.json","password": "${{ secrets.AZURE_ARTIFACTS_PERSONAL_ACCESS_TOKEN }}"}]}'
 
 jobs:
   delete-pre-releases:
