fix: Remove commented-out file entry for AppCommon in EdFi.Ods.AdminApi.nuspec

--- a/Application/EdFi.Ods.AdminApi/EdFi.Ods.AdminApi.nuspec
+++ b/Application/EdFi.Ods.AdminApi/EdFi.Ods.AdminApi.nuspec
@@ -17,7 +17,7 @@
        <file src="..\..\..\Installer.AdminApi\uninstall.ps1" target="installer"/>
        <file src="..\..\..\Installer.AdminApi\global.json" target="installer"/>
        <file src="..\..\..\Installer.AdminApi\Install-AdminApi.psm1" target="installer"/>
-       <file src="..\..\..\Installer.AdminApi\AppCommon\**" target="installer"/>
+       <file src="..\..\..\Installer.AdminApi\AppCommon\**" target="installer/AppCommon/"/>
        <!-- <file src="AppCommon\**" target="installer/AppCommon/"/> -->
   </files>
 </package>
